Fix a problem in the parsing of status files - the code assumed that there would be exactly one instance of = on each line (which just look like shell environment variable declarlations.) Fixed this by forcing the line to be split in two - everything after the first = is part of the second string.
Note that this does not handle 'escaped' =s in an sane way. Thus, if
you have an environment variable with a = in its name, it will get
split incorrectly. We'll worry about this one if we see it. :)

--- a/utils/loghole.in
+++ b/utils/loghole.in
@@ -1920,7 +1920,7 @@ def validate_visitor(arg, dirname, names):
                 
                 status = {}
                 for line in open(os.path.join(dirname, name)):
-                    (key, value) = line.split("=")
+                    (key, value) = line.split("=",2)
                     status[key] = value
                     pass
                 
