Various tblog changes:
  Make an attempt to discover what the error was before an swap-* was
  canceled, if any.  Both the main error (canceled) and the other error
  are stored in the error table.  To support this a new column in the
  error table is added "rank".  The primary error has a rank 0 while the
  other error has a rank 1.

  Make an attempt to determine when an error is a "me too" error or the
  real cause of the problem.  "Me too" errors are errors which are
  generally reported when the callie script determined that the caller
  script fails.  The caller script should have reported the error, but
  in some cases the error didn't make it into the database.  Thus if a
  "me too" is reported as the cause of a "swap-*" more info is needed to
  determine the true cause.  When a "me too" error is reported it is
  followed by a "..." on it's own line.  It is also recorded in the
  errors table under the new column "need_more_info".

  Add inferred column to the errors table.  This is the same value as
  the inferred variable in tblog_find_error.

  Add revision column to errors table to make it easy to tell which
  algorithm was used to determine the error.

--- a/tbsetup/assign_wrapper2.in
+++ b/tbsetup/assign_wrapper2.in
@@ -85,10 +85,10 @@ if ($exitcode) {
 	    }
 	    my $sublevel = length($space) > 0 ? 1 : 0;
 	    if ($mesg =~ s/^warning:\s+//i) {
-		dblog(TBLOG_WARNING, {sublevel=>$sublevel}, $mesg);
+		dblog(TBLOG_WARNING, {sublevel=>$sublevel, type=>'primary'}, $mesg);
 	    } else {
 		parse_error($mesg);
-		dblog(TBLOG_ERR, {sublevel=>$sublevel}, $mesg);
+		dblog(TBLOG_ERR, {sublevel=>$sublevel, type=>'primary'}, $mesg);
 	    }
 	}
     }
@@ -97,7 +97,7 @@ if ($exitcode) {
     # already found
     if (!$obvious_error) {
 	parse_error($err);
-	dblog(TBLOG_ERR, {}, $err);
+	dblog(TBLOG_ERR, {type=>'primary'}, $err);
     }
 
     # create a log entry that assign failed
