--- a/db/libdb.pm.in
+++ b/db/libdb.pm.in
@@ -5646,6 +5646,17 @@ sub TBGetOSBootCmd($$$)
     return $retval;
 }
 
+END {
+    # Call it here otherwise may get:
+    #   (in cleanup) Can't call method "FETCH" on an undefined value at 
+    #   /usr/local/lib/perl5/site_perl/5.8.8/mach/Mysql.pm line 91 during 
+    #   global destruction.
+    # Which is probably due to some object being destroyed too some somewhere
+    # in the DBI/DBD modules.
+    TBDBDisconnect();
+}
+
 # _Always_ make sure that this 1 is at the end of the file...
 
 1;
+
